--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -9,23 +9,27 @@
         android:background="#444488"
         android:orientation="vertical" >
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="toggleMenu"
-            android:text="Button 1" />
 
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/button1"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="toggleMenu"
-            android:text="Button 2"/>
-        
+            android:text="Click me to another screen" />
+
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/button2"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="toggleMenu"
-            android:text="Button 3" />
+            android:text="Ctwo fuck" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="button fokken three" />
+
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -53,14 +57,6 @@
 
 
 
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-    <!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->
 
-    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
 
-<!--</RelativeLayout>-->
+
